[package]
name = "artemis-eth-app"
version = "0.1.1"
authors = ["Snowfork <contact@snowfork.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
hex-literal = { version = "0.3.1", default-features = false }
rlp = { version = "0.4", default-features = false }

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[dependencies.frame-support]
default-features = false
version = "2.0.0"

[dependencies.frame-system]
default-features = false
version = "2.0.0"

[dependencies.sp-core]
default-features = false
version = "2.0.0"

[dependencies.sp-std]
default-features = false
version = "2.0.0"

[dependencies.sp-io]
default-features = false
version = "2.0.0"

[dependencies.sp-runtime]
default-features = false
version = "2.0.0"

[dev-dependencies.sp-keyring]
default-features = false
version = "2.0.0"

[dependencies.serde]
package = "serde"
optional = true
version = "1.0.101"
features = ["derive"]

[dependencies.ethabi]
package = "ethabi-decode"
default-features = false
git = "https://github.com/Snowfork/ethabi-decode"
version = "1.2.1"

[dependencies.artemis-core]
default-features = false
path = "../../primitives/core"

[dependencies.artemis-ethereum]
default-features = false
path = "../../primitives/ethereum"

[dependencies.artemis-asset]
default-features = false
path = "../../pallets/bridged-asset"

[dependencies.orml-tokens]
default-features = false
path = "../../pallets/tokens"
version = "0.3.1"

[dependencies.orml-traits]
default-features = false
version = "0.3.1"



[features]
default = ["std"]
std = [
    "hex/std",
    "serde/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "artemis-core/std",
    "artemis-ethereum/std",
    "artemis-asset/std",
    "ethabi/std",
    "rlp/std",
    "orml-traits/std"
]
