[package]
authors = ['Mangata team']
name = "metamask-signature-rpc"
version = "2.0.0"
edition = "2018"
description = "RPC calls for Metamask"
license = "GPL-3.0-or-later"

[dependencies]
codec = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "client", "macros"] }
serde = { workspace = true, features = ["derive"], optional = true }

# Substrate packages

sp-api = { workspace = true, default-features = false }
sp-blockchain = { workspace = true, default-features = false }
sp-rpc = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
mangata-types = { workspace = true, default-features = false }
array-bytes = {  workspace = true }

# local packages

metamask-signature-runtime-api = { version = "2.0.0", path = "../metamask-signature-runtime-api", default-features = false }

[features]
default = ["std"]

std = [
	"serde",
	"sp-api/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"metamask-signature-runtime-api/std",
	"mangata-types/std",
	"codec/std",
]
