[package]
authors = ['Mangata team']
name = "metamask-signature-runtime-api"
version = "2.0.0"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.126", optional = true, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = [
	"derive",
] }

frame-support = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-system = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
serde_json = { version = "1.0.108", default-features = false }
sp-api = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-std = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }

[features]
default = ["std"]

std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"serde",
	"serde_json/std",
	"scale-info/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
