[package]
authors = ['Mangata team']
name = "metamask-signature-runtime-api"
version = "2.0.0"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
sp-api = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-std = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }

[features]
default = ["std"]

std = [
	"codec/std",
	"sp-api/std",
	"sp-std/std",
]
