[package]
authors = ['Mangata team']
name = "metamask-signature-runtime-api"
version = "2.0.0"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
sp-api = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

[features]
default = ["std"]

std = [
	"codec/std",
	"sp-api/std",
	"sp-std/std",
]
