[package]
authors = ["Mangata team"]
edition = "2018"
name = "pallet-metamask-signature"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive"] }
log = { workspace = true, default-features = false }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
alloy-sol-types = { workspace = true, default-features = false }

[dev-dependencies]

[features]
default = ["std"]
std = [
	"serde",
	"serde_json/std",
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"alloy-sol-types/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
