[package]
name = "parachain-staking"
authors = ["PureStake"]
description = "parachain staking pallet for collator selection and reward distribution"
edition = "2021"
version = "3.0.0"

[dependencies]
aquamarine = "0.1.12"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
itertools = { version = "0.11.0", default-features = false, features = ["use_alloc"] }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.126", optional = true }

pallet-issuance = { path = "../issuance", default-features = false, optional = true }

# Substrate
frame-benchmarking = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false, optional = true }
frame-support = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
frame-system = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
mangata-support = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
mangata-types = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
pallet-authorship = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
pallet-collective-mangata = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
pallet-session = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-arithmetic = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-staking = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-std = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }

orml-tokens = { git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "develop", default-features = false }

[dev-dependencies]
similar-asserts = "1.1.0"

pallet-vesting-mangata = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }
sp-io = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop", default-features = false }

orml-traits = { git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "develop", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"mangata-support/std",
	"mangata-types/std",
	"orml-tokens/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"scale-info/std",
	"serde",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-collective-mangata/runtime-benchmarks",
	"pallet-issuance",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
