[package]
name = "parachain-staking"
authors = ["PureStake"]
description = "parachain staking pallet for collator selection and reward distribution"
edition = "2021"
version = "3.0.0"

[dependencies]
aquamarine.workspace = true
codec = { workspace = true, default-features = false }
itertools = { workspace = true, default-features = false, features = ["use_alloc"] }
log = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, optional = true }

pallet-issuance = { path = "../issuance", default-features = false, optional = true }

# Substrate
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
mangata-support = { workspace = true, default-features = false }
mangata-types = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-collective-mangata = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

orml-tokens = { workspace = true, default-features = false }

[dev-dependencies]
similar-asserts.workspace = true

pallet-vesting-mangata = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }

orml-traits = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"mangata-support/std",
	"mangata-types/std",
	"orml-tokens/std",
	"pallet-authorship/std",
	"pallet-session/std",
	"scale-info/std",
	"serde",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-collective-mangata/runtime-benchmarks",
	"pallet-issuance",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime"]
