[package]
authors = ['Mangata team']
edition = '2018'
name = 'pallet-proof-of-stake'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = { version = "0.4.20", default-features = false }
hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
hex-literal = { version = "0.3.3", default-features = false }
serde = { version = "1.0.126", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-support = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-benchmarking = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-system = { default-features = false, version = '4.0.0-dev' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
frame-executive = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
frame-try-runtime = { git = "https://github.com/mangata-finance/substrate", default-features = false, optional = true , branch = "mangata-dev" }
sp-runtime = { default-features = false, version = '7.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-core = { default-features = false, version = '7.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
sp-std = { version = "5.0.0", default-features = false , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
mangata-types = { default-features = false, git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
pallet-issuance = { default-features = false, path = "../issuance" }
pallet-bootstrap = { default-features = false, path = "../bootstrap" }
sp-arithmetic = { default-features = false, version = '6.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
libm = { default-features = false, git = "https://github.com/rust-lang/libm", rev="2f3fc968f43d345f9b449938d050a9ea46a04c83"}
orml-tokens = {  default-features = false, version = '0.4.1-dev' , git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }

pallet-vesting-mangata = { git = "https://github.com/mangata-finance/substrate", default-features = false, branch = "mangata-dev" }
mangata-support = { default-features = false , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }

[dev-dependencies]
similar-asserts = "1.1.0"
orml-traits = { default-features = false, version="0.4.1-dev" , git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }
sp-io = { default-features = false, version = '7.0.0' , git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev" }
lazy_static = "1.1.1"
env_logger = "0.9.0"
serial_test = { version = "0.6.0", default-features = false }
test-case = "2.0.2"

[features]
default = ['std']
std = [
    'hex/std',
	'serde',
    'codec/std',
    'sp-std/std',
	'sp-core/std',
    'frame-support/std',
    'frame-system/std',
	"frame-benchmarking/std",
	'orml-tokens/std',
	"frame-benchmarking/std",
    'pallet-vesting-mangata/std',
    "mangata-support/std",
	"scale-info/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]

try-runtime = [
	"frame-support/try-runtime",
	"frame-try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"orml-tokens/try-runtime",
	"pallet-bootstrap/try-runtime",
	"pallet-issuance/try-runtime",
	"pallet-vesting-mangata/try-runtime",
	"sp-runtime/try-runtime"
]
